refactor(components): 优化代码实现并移除缓存文件
- 移除了 cache/cache.json 缓存配置文件
- 从 HtmlFormFieldTest 和 HtmlSelectTest 中移除了未使用的 Collections 导入
- 在 HtmlSelect 组件中优化 deselectByValue、deselectByIndex 和 deselectByVisibleText 方法的实现
- 将测试中的 Arrays.asList 替换为 List.of 以使用更现代的 API
- 修复 MuiContainer 组件中获取 class 属性的实现方式
- 为相关方法添加了 @SuppressWarnings 注解以处理编译警告